samples/_failures_safe/1761006479_736c3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5c72864.c: In function ‘dfs’:
./samples/SAFE/__tmp_b5c72864.c:174:5: error: expected expression at end of input
  174 |     if (
      |     ^~
./samples/SAFE/__tmp_b5c72864.c:174:5: error: expected declaration or statement at end of input
